Terminate WebProcesses if GPUProcess crashes more than twice in 30 seconds https://bugs.webkit.org/show_bug.cgi?id=218811 <rdar://problem/71292424>

Reviewed by Tim Horton.

Source/WebKit:

If the GPUProcess crashes more than twice in 30 seconds, we now terminate all WebProcesses
to try and get back into a good state. This is to avoid getting into a situation where
the GPUProcess is crash looping.

* UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::terminate):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::gpuProcessCrashed):
(WebKit::WebProcessPool::resetGPUProcessCrashCount):
(WebKit::WebProcessPool::terminateAllWebContentProcesses):
* UIProcess/WebProcessPool.h:

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:
(TEST):
* TestWebKitAPI/cocoa/TestNavigationDelegate.h:
* TestWebKitAPI/cocoa/TestNavigationDelegate.mm:
(-[TestNavigationDelegate waitForWebContentProcessDidTerminate]):
(-[WKWebView _test_waitForWebContentProcessDidTerminate]):


Canonical link: https://commits.webkit.org/231482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269703 268f45cc-cd09-0410-ab3c-d52691b4dbfc