Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp
@@ -108,6 +108,8 @@ void AuxiliaryProcessProxy::connect()
 
 void AuxiliaryProcessProxy::terminate()
 {
+    RELEASE_LOG(Process, "AuxiliaryProcessProxy::terminate: PID: %d", processIdentifier());
+
 #if PLATFORM(COCOA)
     if (m_connection && m_connection->kill())
         return;
